--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -22,28 +22,28 @@ intro:
     # intro item loop
     - title : "Get inspired"
       image : "images/about/image-1.jpg"
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, ducimus."
+      content : "Fitness is a state of mind. Dress for a workout, even if you’re not feeling up to it."
       
     # intro item loop
     - title : "Build Yourself"
       image : "images/about/image-2.jpg"
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, ducimus."
+      content : "It's more than just lifting weights. It takes commitment, dedication and consistency."
       
     # intro item loop
     - title : "Eat Healthy"
       image : "images/about/image-3.jpg"
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, ducimus."
+      content : "We guide you to eat Real Foods, and lose weight sensibly"
       
     # intro item loop
     - title : "Live a Healty Lifesytle"
-      image : "images/about/image-1.jpg"
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, ducimus."
+      image : "images/about/image-4.jpg"
+      content : "Fitness is much more than just exercise: It’s a Lifestyle"
 
 ################################# Video ###############################
 video:
   enable : true
   title : "We Make a Difference <br>in every Lifestyle"
-  videoThumb : "images/bg/bg-3.jpg"
+  videoThumb : "images/bg/vbg-1.jpg"
   video: "https://www.youtube.com/watch?v=1XHrTIQg_d4"
   
 ################################# funfacts ###############################
