--- a/data/about.yml
+++ b/data/about.yml
@@ -2,17 +2,16 @@
 about:
   enable : true
   image : "images/about/img-3.jpg"
-  title : "Welcome to Charite NonProfit Organization"
-  leadContent : "Charite is the world’s #1 fundraising site forcharitable causes. Raise money for over 1.5
-            million charities."
-  content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat."
+  title : "Welcome to Fitness Lifestyle"
+  leadContent : "Our goal is to guide you to success while giving you the tools that will allow you to thrive!"
+  content : "We deliver workout experiences that are not only challenging and motivating, but also fun and inviting. 
+  So whether you’re looking to get back on track, start fresh or simply not sure where to start, you’ll always be welcomed. 
+  Let us connect you with results that help lead to a stronger, bolder, and more incredible you inside and outside the gym."
 
 
 ############################# partners ##########################
 partners:
-  enable : true
+  enable : False
   title : "Worldwide partner"
   content : "Assumenda reiciendis delectus dolore incidunt molestias omnis quo quaerat voluptate, eligendi perspiciatis
             ipsa laudantium nesciunt officia, odit nemo quidem hic itaque. Fugiat."
@@ -39,79 +38,37 @@ history:
   enable : true
   historyItem:
     # history item loop
-    - title : "Founded in 1962"
+    - title : "Founded in 2010"
       icon : "ti-home"
-      subtitle : "Work Since 1987 with Pride!!"
-      content : "Cum voluptas tenetur, voluptatibus mollitia odio sint, alias debitis quasi ut commodo consequat."
+      subtitle : "Operational since 2013!!"
+      content : "Fitness Lifestyle was established in 2010 by Sam Pakiaraj, one of the industry's fitness leaders."
       
     # history item loop
-    - title : "Our History"
+    - title : "Our Mission"
       icon : "ti-agenda"
       subtitle : "Mission to make smile the world"
-      content : "Cum voluptas tenetur, voluptatibus mollitia odio sint, alias debitis quasi ut commodo consequat."
+      content : "We guide you to a better health and fitness in order for you to beter cope with this modern lifestyle."
       
     # history item loop
     - title : "Large Community"
       icon : "ti-hand-open"
       subtitle : "Join our community & help others"
-      content : "Cum voluptas tenetur, voluptatibus mollitia odio sint, alias debitis quasi ut commodo consequat."
+      content : "Here, you can be yourself, go at your own pace with inspiration and support for you to achieve your best."
 
 ############################### Team ##############################
 team:
   enable : true
-  subtitle : "Our volunteer"
-  title : "Expert volunteer to get best service"
+  subtitle : "Our Trainers"
+  title : "Expert trainers to get best service"
   button:
     enable : true
-    label : "Become a volunteer"
+    label : "Become a Trainer"
     link : "volunteer"
   teamMember:
     # team member loop
-    - name : "Justin hammer"
-      designation : "Student"
-      image : "images/team/volunteer-img1.1.jpg"
-      social:
-        - name : "facebook"
-          icon : "ti-facebook" # themify icon pack https://themify.me/themify-icons
-          link : "#"
-          
-        - name : "twitter"
-          icon : "ti-twitter-alt" # themify icon pack https://themify.me/themify-icons
-          link : "#"
-          
-        - name : "instagram"
-          icon : "ti-instagram" # themify icon pack https://themify.me/themify-icons
-          link : "#"
-          
-        - name : "linkedin"
-          icon : "ti-linkedin" # themify icon pack https://themify.me/themify-icons
-          link : "#"
-          
-    # team member loop
-    - name : "Jason roy"
-      designation : "Businessman"
-      image : "images/team/volunteer-img1.2.jpg"
-      social:
-        - name : "facebook"
-          icon : "ti-facebook" # themify icon pack https://themify.me/themify-icons
-          link : "#"
-          
-        - name : "twitter"
-          icon : "ti-twitter-alt" # themify icon pack https://themify.me/themify-icons
-          link : "#"
-          
-        - name : "instagram"
-          icon : "ti-instagram" # themify icon pack https://themify.me/themify-icons
-          link : "#"
-          
-        - name : "linkedin"
-          icon : "ti-linkedin" # themify icon pack https://themify.me/themify-icons
-          link : "#"
-          
-    # team member loop
-    - name : "Henry oswald"
-      designation : "CO founder"
-      image : "images/team/volunteer-img1.3.jpg"
+    - name : "John Doe"
+      designation : "Trainer"
+      image : "images/team/staff-1.jpg"
       social:
         - name : "facebook"
           icon : "ti-facebook" # themify icon pack https://themify.me/themify-icons
@@ -131,8 +88,134 @@ team:
           
     # team member loop
     - name : "John Doe"
-      designation : "Businessman"
-      image : "images/team/volunteer-img1.1.jpg"
+      designation : "Trainer"
+      image : "images/team/staff-2.jpg"
+      social:
+        - name : "facebook"
+          icon : "ti-facebook" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "twitter"
+          icon : "ti-twitter-alt" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "instagram"
+          icon : "ti-instagram" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "linkedin"
+          icon : "ti-linkedin" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+    # team member loop
+    - name : "John Doe"
+      designation : "Trainer"
+      image : "images/team/staff-3.jpg"
+      social:
+        - name : "facebook"
+          icon : "ti-facebook" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "twitter"
+          icon : "ti-twitter-alt" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "instagram"
+          icon : "ti-instagram" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "linkedin"
+          icon : "ti-linkedin" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+    # team member loop
+    - name : "John Doe"
+      designation : "Trainer"
+      image : "images/team/staff-4.jpg"
+      social:
+        - name : "facebook"
+          icon : "ti-facebook" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "twitter"
+          icon : "ti-twitter-alt" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "instagram"
+          icon : "ti-instagram" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "linkedin"
+          icon : "ti-linkedin" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+    
+    # team member loop
+    - name : "Jane Doe"
+      designation : "Trainer"
+      image : "images/team/staff-5.jpg"
+      social:
+        - name : "facebook"
+          icon : "ti-facebook" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "twitter"
+          icon : "ti-twitter-alt" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "instagram"
+          icon : "ti-instagram" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "linkedin"
+          icon : "ti-linkedin" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+
+    # team member loop
+    - name : "John Doe"
+      designation : "Trainer"
+      image : "images/team/staff-6.jpg"
+      social:
+        - name : "facebook"
+          icon : "ti-facebook" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "twitter"
+          icon : "ti-twitter-alt" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "instagram"
+          icon : "ti-instagram" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "linkedin"
+          icon : "ti-linkedin" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+
+    # team member loop
+    - name : "John Doe"
+      designation : "Trainer"
+      image : "images/team/staff-7.jpg"
+      social:
+        - name : "facebook"
+          icon : "ti-facebook" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "twitter"
+          icon : "ti-twitter-alt" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "instagram"
+          icon : "ti-instagram" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+          
+        - name : "linkedin"
+          icon : "ti-linkedin" # themify icon pack https://themify.me/themify-icons
+          link : "#"
+
+    # team member loop
+    - name : "Jane Doe"
+      designation : "Trainer"
+      image : "images/team/staff-8.jpg"
       social:
         - name : "facebook"
           icon : "ti-facebook" # themify icon pack https://themify.me/themify-icons
