--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -20,24 +20,24 @@ intro:
 
   introItem:
     # intro item loop
-    - title : "Get inspired"
+    - title : "Personal Training"
       image : "images/homepage/image-1.jpeg"
-      content : "Fitness is a state of mind. Dress for a workout, even if you’re not feeling up to it."
+      content : "Start your fitness goals with assistance from our Certified Personal Trainers who can help you meet your fitness goals more effectively. We specialize in many areas such as weight management, injury rehabilitation, sports specifics, nutrition, and flexibility. Personal training is one-on-one instruction that incorporates exercise screening, goal-setting and health education. Following a fitness consultation, the trainer will design a challenging workout routine specifically designed for each individual’s needs. Your personal trainer is there to instruct you on proper lifting techniques, introduce you to exercises that target your specific goals and motivate you towards your full potential."
       
     # intro item loop
-    - title : "Build Yourself"
+    - title : "Sports Performance Training"
       image : "images/homepage/image-2.jpeg"
-      content : "It's more than just lifting weights. It takes commitment, dedication and consistency."
+      content : "OUR Sports Performance Training is designed with athletes in mind. Whether you play team sports or solo, whether you play ball sports or track & field and whether you're a pro, semi-pro or hobby athlete, we'll help you reach your full potential. You'll get a full assessment, performance test, personalised programme and 2 or 3 small group training sessions per week, in which you'll learn to run faster, jump higher, leap farther and watch your performance skyrocket on the field, court, track or pitchsigned with athletes in mind. Whether you play team sports or solo, whether you play ball sports or track & field and whether you're a pro, semi-pro or hobby athlete, we'll help you reach your full potential. You'll get a full assessment, performance test, personalised programme and 2 or 3 small group training sessions per week, in which you'll learn to run faster, jump higher, leap farther and watch your performance skyrocket on the field, court, track or pitch."
       
     # intro item loop
-    - title : "Eat Healthy"
-      image : "images/homepage/image-3.jpeg"
-      content : "We guide you to eat Real Foods, and lose weight sensibly"
+    - title : ""
+      image : ""
+      content : ""
       
     # intro item loop
-    - title : "Live a Healthy Lifesytle"
-      image : "images/homepage/image-4.jpeg"
-      content : "Fitness is much more than just exercise: It’s a Lifestyle"
+    - title : ""
+      image : ""
+      content : ""
 
 ################################# Video ###############################
 video:
