--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -12,8 +12,8 @@ banner:
 ############################# Intro ##################################
 intro:
   enable: true
-  subtitle : "What we can do"
-  title : "We Believe that We can <br>Help You be a Better you"
+  subtitle : "What We Can Do"
+  title : "We Believe That We Can <br>Help You Be A Better You"
   content : "Our passion for empowering members to live fit and healthy lives is reflected in everything we do. 
   We realize that the toughest step is often taking that first step into a gym, and that’s why our clubs feel more like communities. 
   Here, you can be yourself, go at your own pace and get the inspiration and support you need to achieve your best every day."
