--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ paginate = 6
     [[menu.main]]
     parent = "Programmes"
     name = "Personal Training"
-    URL = "trainer"
+    URL = "trainer/trainer-1"
 
     [[menu.main]]
     parent = "Programmes"
