--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 baseURL = "https://www.demo.fitnesslifestyle.com.my"
 languageCode = "en-us"
 title = "Fitness Lifestyle | Where Fitness is a Way of Life"
-theme = ["hugo-social-metadata", "wishfund-hugo"]
+theme = "wishfund-hugo"
 summaryLength = "10"
 paginate = 6
 
